testsuite/tests/properties/invalid_block_expr/missing_expr.lkt
import common

class Example: FooNode {
    @exported fun p(): Bool = {
        val _ = true;
    }
}
